--- a/animationsGif/animationsGif/Base.lproj/Main.storyboard
+++ b/animationsGif/animationsGif/Base.lproj/Main.storyboard
@@ -1095,15 +1095,46 @@
                                     <outletCollection property="gestureRecognizers" destination="0Ce-1d-ScP" appends="YES" id="TRP-ce-vMx"/>
                                 </connections>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FvS-21-Y2q">
+                                <rect key="frame" x="16" y="20" width="46" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="Mzf-7v-i5p"/>
+                                    <constraint firstAttribute="width" constant="46" id="Pje-tw-MUn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Fb7-Bi-Fup" kind="unwind" unwindAction="unwindToOnceMain:" id="l2g-TT-7eB"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7jg-O4-PE4">
+                                <rect key="frame" x="152" y="63" width="70" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="ZZQ-mc-Z0L"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <state key="normal" title="Reset">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="resetBtn:" destination="Ewf-Ga-Yhy" eventType="touchUpInside" id="sOZ-NC-6yz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="7jg-O4-PE4" firstAttribute="centerX" secondItem="22Z-yb-trp" secondAttribute="centerX" id="3dx-Gz-Op4"/>
+                            <constraint firstItem="FvS-21-Y2q" firstAttribute="top" secondItem="pmg-iI-77k" secondAttribute="bottom" id="Bia-Ce-qKF"/>
                             <constraint firstItem="yx9-4Y-ogG" firstAttribute="top" secondItem="22Z-yb-trp" secondAttribute="top" id="Glv-2f-9j0"/>
                             <constraint firstItem="aaQ-xZ-Ep5" firstAttribute="centerX" secondItem="22Z-yb-trp" secondAttribute="centerX" id="QKL-t5-ywe"/>
                             <constraint firstAttribute="trailing" secondItem="yx9-4Y-ogG" secondAttribute="trailing" id="QoY-E5-eku"/>
                             <constraint firstItem="yx9-4Y-ogG" firstAttribute="leading" secondItem="22Z-yb-trp" secondAttribute="leading" id="Yag-lC-iHB"/>
+                            <constraint firstItem="aaQ-xZ-Ep5" firstAttribute="top" secondItem="7jg-O4-PE4" secondAttribute="bottom" constant="35" id="Z3z-qG-P14"/>
                             <constraint firstItem="aaQ-xZ-Ep5" firstAttribute="centerY" secondItem="22Z-yb-trp" secondAttribute="centerY" constant="-21.5" id="Z62-GH-mCG"/>
                             <constraint firstItem="WFe-mh-sus" firstAttribute="top" secondItem="yx9-4Y-ogG" secondAttribute="bottom" id="k7I-se-0pi"/>
+                            <constraint firstItem="FvS-21-Y2q" firstAttribute="leading" secondItem="22Z-yb-trp" secondAttribute="leadingMargin" id="nSZ-O2-LPP"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1112,6 +1143,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ApC-og-fOc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Fb7-Bi-Fup" userLabel="Exit" sceneMemberID="exit"/>
                 <panGestureRecognizer minimumNumberOfTouches="1" id="0Ce-1d-ScP">
                     <connections>
                         <action selector="panCard:" destination="Ewf-Ga-Yhy" id="XEb-bx-WUH"/>
