--- a/animationsGif/animationsGif/Base.lproj/Main.storyboard
+++ b/animationsGif/animationsGif/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ARR-OK-9uo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -887,11 +887,26 @@
                                                 <segue destination="APm-gR-QJO" kind="unwind" unwindAction="unwindToMain:" id="AOs-3T-tPT"/>
                                             </connections>
                                         </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nf2-Yq-OGm">
+                                            <rect key="frame" x="321" y="18" width="46" height="46"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="46" id="HKe-mO-Bzy"/>
+                                                <constraint firstAttribute="width" constant="46" id="WTI-Ud-WcC"/>
+                                            </constraints>
+                                            <state key="normal" title="Next">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <segue destination="ARR-OK-9uo" kind="modal" id="SLJ-3c-0BK"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="528-Gb-T2o" firstAttribute="centerX" secondItem="Ly0-B9-Fp0" secondAttribute="centerX" id="0DX-es-QWa"/>
                                         <constraint firstItem="Mpq-Zx-xHL" firstAttribute="leading" secondItem="Ly0-B9-Fp0" secondAttribute="leading" constant="15" id="1Uu-7A-GlE"/>
                                         <constraint firstItem="Mpq-Zx-xHL" firstAttribute="top" secondItem="Ly0-B9-Fp0" secondAttribute="top" constant="18" id="Cf2-NO-YTe"/>
+                                        <constraint firstItem="nf2-Yq-OGm" firstAttribute="top" secondItem="Ly0-B9-Fp0" secondAttribute="top" constant="18" id="II3-b4-qUE"/>
+                                        <constraint firstAttribute="trailing" secondItem="nf2-Yq-OGm" secondAttribute="trailing" constant="8" id="MM0-N2-t8k"/>
                                         <constraint firstItem="528-Gb-T2o" firstAttribute="top" secondItem="Ly0-B9-Fp0" secondAttribute="top" constant="18" id="wQX-00-2S3"/>
                                     </constraints>
                                 </view>
@@ -967,7 +982,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coolest animation ever for the iPhone" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e46-rg-HPS">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slide out animation for  iPhone" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e46-rg-HPS">
                                 <rect key="frame" x="81" y="243" width="212" height="87"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="87" id="4Ot-WJ-Tq5"/>
@@ -989,7 +1004,7 @@
                                     <segue destination="Ewf-Ga-Yhy" kind="modal" id="8KP-XM-ARe"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Go Nxt" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmK-ym-ElL">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmK-ym-ElL">
                                 <rect key="frame" x="149" y="450" width="77" height="25.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="77" id="Lqv-Kf-OIy"/>
@@ -998,6 +1013,31 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jdo-5j-ANS">
+                                <rect key="frame" x="16" y="12" width="46" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="aXQ-Ux-uvz" kind="unwind" unwindAction="unwindToTen:" id="4Vk-6L-f9Z"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="78A-Yt-1T2">
+                                <rect key="frame" x="164" y="20" width="46" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="46" id="qJR-ea-zBu"/>
+                                    <constraint firstAttribute="width" constant="46" id="rhD-W3-MZf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Main">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="aXQ-Ux-uvz" kind="unwind" unwindAction="unwindToMain:" id="Vy1-6s-77F"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -1011,8 +1051,10 @@
                             <constraint firstItem="ZpC-4s-8Ya" firstAttribute="top" secondItem="mVB-jR-LVT" secondAttribute="top" id="NiI-E6-Lio"/>
                             <constraint firstItem="e46-rg-HPS" firstAttribute="centerY" secondItem="mVB-jR-LVT" secondAttribute="centerY" constant="-47" id="Og4-YB-Dzh"/>
                             <constraint firstAttribute="trailing" secondItem="ZpC-4s-8Ya" secondAttribute="trailing" id="Tu6-G1-2ID"/>
+                            <constraint firstItem="78A-Yt-1T2" firstAttribute="top" secondItem="Dge-hz-J3W" secondAttribute="bottom" id="WL2-Os-ifi"/>
                             <constraint firstItem="ZpC-4s-8Ya" firstAttribute="leading" secondItem="mVB-jR-LVT" secondAttribute="leading" id="WXC-yn-7kb"/>
                             <constraint firstItem="MF9-6V-v18" firstAttribute="top" secondItem="ZpC-4s-8Ya" secondAttribute="bottom" id="gwI-Rw-a80"/>
+                            <constraint firstItem="78A-Yt-1T2" firstAttribute="centerX" secondItem="mVB-jR-LVT" secondAttribute="centerX" id="u2Y-cE-pI0"/>
                             <constraint firstItem="t8S-1X-VE9" firstAttribute="centerX" secondItem="mVB-jR-LVT" secondAttribute="centerX" id="w1o-b7-sXT"/>
                         </constraints>
                     </view>
@@ -1025,6 +1067,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p10-c6-gVh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="aXQ-Ux-uvz" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="8288.7999999999993" y="105.69715142428787"/>
         </scene>
