--- a/animationsGif/animationsGif/Base.lproj/Main.storyboard
+++ b/animationsGif/animationsGif/Base.lproj/Main.storyboard
@@ -1143,7 +1143,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="rZJ-f3-Kcg" kind="push" id="AdW-H4-Lox"/>
+                                    <segue destination="rZJ-f3-Kcg" kind="modal" id="gaB-Vr-iIp"/>
                                 </connections>
                             </button>
                         </subviews>
